fixed spacing footer and types section

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -4,7 +4,6 @@ footer {
   background-color: $princeton-orange;
   padding: 20px;
   color: $black-color;
-  margin-top: 50px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
